--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
         <div class="send_email">
           <h2>>Send_an_email</h2>
-          <img id="email_pfp" src="../images/contact_images/email_pfp.png" />
+          <img id="email_pfp" src="../../images/contact_images/email_pfp.png" />
           <p>
             Feel free to send me a message about any queries or opportunities.
           </p>
@@ -89,7 +89,7 @@
               <a class="socialButton" href="https://www.instagram.com/"
                 ><img
                   height="45px"
-                  src="../images/contact_images/socials/instagram.png"
+                  src="../../images/contact_images/socials/instagram.png"
                   alt="instagram"
               /></a>
 
@@ -99,7 +99,7 @@
                 class="twitter"
                 ><img
                   height="45px"
-                  src="../images/contact_images/socials/twitter.png"
+                  src="../../images/contact_images/socials/twitter.png"
                   alt="twitter"
               /></a>
 
@@ -109,7 +109,7 @@
                 class="behance"
                 ><img
                   height="45px"
-                  src="../images/contact_images/socials/behance.png"
+                  src="../../images/contact_images/socials/behance.png"
                   alt="behance"
               /></a>
 
@@ -119,7 +119,7 @@
                 class="linkedin"
                 ><img
                   height="45px"
-                  src="../images/contact_images/socials/linkedin.png"
+                  src="../../images/contact_images/socials/linkedin.png"
                   alt="linkedin"
               /></a>
 
@@ -129,7 +129,7 @@
                 class="github"
                 ><img
                   height="45px"
-                  src="../images/contact_images/socials/github.png"
+                  src="../../images/contact_images/socials/github.png"
                   alt="github"
               /></a>
             </div>
