--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="header_box">
           <img
             class="header_image"
-            src="../images/index_images/pfp.png"
+            src="../../images/index_images/pfp.png"
             alt="dat_duong"
           />
           <h2 class="header_message">>Hi there!</h2>
@@ -68,7 +68,7 @@
           </button>
         </div>
 
-        <img id="side_pfp" src="../images/index_images/side_pfp.png" />
+        <img id="side_pfp" src="../../images/index_images/side_pfp.png" />
 
         <div class="my_skills">
           <svg class="skills_box" viewbox="0 0 800 600">
@@ -85,27 +85,27 @@
             <div class="skills">
               <img
                 height="45px"
-                src="../images/index_images/skills/figma_logo.png"
+                src="../../images/index_images/skills/figma_logo.png"
                 alt="figma"
               />
               <img
                 height="45px"
-                src="../images/index_images/skills/html_logo.png"
+                src="../../images/index_images/skills/html_logo.png"
                 alt="html"
               />
               <img
                 height="45px"
-                src="../images/index_images/skills/js_logo.png"
+                src="../../images/index_images/skills/js_logo.png"
                 alt="javascript"
               />
               <img
                 height="45px"
-                src="../images/index_images/skills/python_logo.png"
+                src="../../images/index_images/skills/python_logo.png"
                 alt="python"
               />
               <img
                 height="45px"
-                src="../images/index_images/skills/vsc_logo.png"
+                src="../../images/index_images/skills/vsc_logo.png"
                 alt="vsc"
               />
             </div>
