--- a/works.html
+++ b/works.html
@@ -46,14 +46,11 @@
               href="https://editor.p5js.org/Dat.Duong/full/J86IG9k15"
             >
               <img
-                src="../../images/work_images/javascript_project_images/generative_design.png"
+                src="images/work_images/javascript_project_images/generative_design.png"
                 alt="gen_design"
               />
               <div class="project_desc">
-                <img
-                  id="open_tab"
-                  src="../../images/work_images/open_tab.png"
-                />
+                <img id="open_tab" src="images/work_images/open_tab.png" />
                 <h3>>generative_design</h3>
                 <p>&nbsp;A customisable generative &nbsp;design.</p>
               </div>
@@ -66,14 +63,11 @@
               href="https://editor.p5js.org/Dat.Duong/full/ZLYyFXrEO"
             >
               <img
-                src="../../images/work_images/javascript_project_images/traffic_light.png"
+                src="images/work_images/javascript_project_images/traffic_light.png"
                 alt="gen_design"
               />
               <div class="project_desc">
-                <img
-                  id="open_tab"
-                  src="../../images/work_images/open_tab.png"
-                />
+                <img id="open_tab" src="images/work_images/open_tab.png" />
                 <h3>>traffic_light</h3>
                 <p>
                   &nbsp;Control a traffic light and &nbsp;see how the "car"
@@ -89,14 +83,11 @@
               href="https://editor.p5js.org/Dat.Duong/full/ddNbNPuMB"
             >
               <img
-                src="../../images/work_images/javascript_project_images/fossil_finder.png"
+                src="images/work_images/javascript_project_images/fossil_finder.png"
                 alt="gen_design"
               />
               <div class="project_desc">
-                <img
-                  id="open_tab"
-                  src="../../images/work_images/open_tab.png"
-                />
+                <img id="open_tab" src="images/work_images/open_tab.png" />
                 <h3>>fossil_finder</h3>
                 <p>&nbsp;Control a T-rex searching for &nbsp;fossils.</p>
               </div>
@@ -109,14 +100,11 @@
               href="https://editor.p5js.org/Dat.Duong/full/U1o_0WxrK"
             >
               <img
-                src="../../images/work_images/javascript_project_images/hue_shift.png"
+                src="images/work_images/javascript_project_images/hue_shift.png"
                 alt="gen_design"
               />
               <div class="project_desc">
-                <img
-                  id="open_tab"
-                  src="../../images/work_images/open_tab.png"
-                />
+                <img id="open_tab" src="images/work_images/open_tab.png" />
                 <h3>>hue_shift</h3>
                 <p>
                   &nbsp;Create colourful artworks by changing the colour hue
